--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: celeritas
+      POSTGRES_DB: sokudo
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
 
@@ -68,7 +68,7 @@ services:
 #    restart: always
 #    environment:
 #      MYSQL_ROOT_PASSWORD: password
-#      MYSQL_DATABASE: celeritas
+#      MYSQL_DATABASE: sokudo
 #      MYSQL_USER: mariadb
 #      MYSQL_PASSWORD: password
 #
