Populate sftp properties in .env

--- a/.env
+++ b/.env
@@ -77,10 +77,10 @@ MINIO_USESSL=false
 MINIO_REGION=us-east-1
 MINIO_BUCKET=testbucket
 
-SFTP_HOST=
-SFTP_USER=
-SFTP_PASS=
-SFTP_PORT=
+SFTP_HOST=localhost
+SFTP_USER=sftp
+SFTP_PASS=password
+SFTP_PORT=2022
 
 WEBDAV_HOST=
 WEBDAV_USER=
