Update deleteFromFs handler to include WEBDAV case

--- a/.env
+++ b/.env
@@ -82,6 +82,6 @@ SFTP_USER=sftp
 SFTP_PASS=password
 SFTP_PORT=2022
 
-WEBDAV_HOST=
-WEBDAV_USER=
-WEBDAV_PASS=
+WEBDAV_HOST=http://127.0.0.1:10080
+WEBDAV_USER=sftp
+WEBDAV_PASS=password
