Add permitted upload types to .env

--- a/.env
+++ b/.env
@@ -85,3 +85,7 @@ SFTP_PORT=2022
 WEBDAV_HOST=http://127.0.0.1:10080
 WEBDAV_USER=sftp
 WEBDAV_PASS=password
+
+# permitted upload types
+ALLOWED_FILETYPES="image/gif,image/jpeg,image/png,application/pdf"
+MAX_UPLOAD_SIZE=1048576000
