Add DATAB.envSE config in

--- a/.env
+++ b/.env
@@ -15,13 +15,13 @@ SERVER_NAME=localhost
 SECURE=false
 
 # database config - postgres or mysql
-DATABASE_TYPE=
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USER=
-DATABASE_PASS=
-DATABASE_NAME=
-DATABASE_SSL_MODE=
+DATABASE_TYPE=postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=5532
+DATABASE_USER=postgres
+DATABASE_PASS=password
+DATABASE_NAME=sokudo
+DATABASE_SSL_MODE=disable
 
 # redis config
 REDIS_HOST=
