Implement github login

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ DATABASE_NAME=sokudo
 DATABASE_SSL_MODE=disable
 
 # redis config
-REDIS_HOST=
+REDIS_HOST=localhost:6379
 REDIS_PASSWORD=
 REDIS_PREFIX=myapp
 
@@ -40,7 +40,7 @@ COOKIE_SECURE=false
 COOKIE_DOMAIN=localhost
 
 # session store: cookie, redis, mysql, or postgres
-SESSION_TYPE=cookie
+SESSION_TYPE=redis
 
 # mail settings
 SMTP_HOST=
@@ -89,3 +89,7 @@ WEBDAV_PASS=password
 # permitted upload types
 ALLOWED_FILETYPES="image/gif,image/jpeg,image/png,application/pdf"
 MAX_UPLOAD_SIZE=1048576000
+
+GITHUB_KEY=d0fca1126807646aef99
+GITHUB_SECRET=
+GITHUB_CALLBACK=http://localhost:4000/auth/github/callback
