Add socialLogout functionality

--- a/.env
+++ b/.env
@@ -91,5 +91,5 @@ ALLOWED_FILETYPES="image/gif,image/jpeg,image/png,application/pdf"
 MAX_UPLOAD_SIZE=1048576000
 
 GITHUB_KEY=d0fca1126807646aef99
-GITHUB_SECRET=
+GITHUB_SECRET=7d6778d218f807ca337444103375c479357edefb
 GITHUB_CALLBACK=http://localhost:4000/auth/github/callback
