Add google social login-logout properties

--- a/.env
+++ b/.env
@@ -93,3 +93,8 @@ MAX_UPLOAD_SIZE=1048576000
 GITHUB_KEY=d0fca1126807646aef99
 GITHUB_SECRET=7d6778d218f807ca337444103375c479357edefb
 GITHUB_CALLBACK=http://localhost:4000/auth/github/callback
+
+# dummy data
+GOOGLE_KEY=d0fca1126807646aef99
+GOOGLE_SECRET=7d6778d218f807ca337444103375c479357edefb
+GOOGLE_CALLBACK=http://localhost:4000/auth/google/callback
