--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ DEBUG=true
 
 # the port should we listen on
 PORT=4000
+RPC_PORT=12345
 
 # the server name, e.g, www.mysite.com
 SERVER_NAME=localhost
